fixed chatbox message spacing issues

--- a/src/client/components/chat.scss
+++ b/src/client/components/chat.scss
@@ -46,6 +46,8 @@ $author-width: 100px;
 				padding-right: 5px;
 				box-sizing: border-box;
 				align-self: center;
+				text-overflow: ellipsis;
+				width: 75px;
 				margin-right: auto;
 			}
 
